--- a/quality_metrics.ipynb
+++ b/quality_metrics.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:57:13.797567Z",
-     "start_time": "2024-05-07T08:57:08.715614Z"
+     "end_time": "2024-05-07T11:30:46.399054Z",
+     "start_time": "2024-05-07T11:30:41.536556Z"
     }
    },
    "cell_type": "code",
@@ -23,6 +23,9 @@
     "from datetime import datetime\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "from tabulate import tabulate\n",
     "import tkinter as tk\n",
     "from tkinter import filedialog\n",
@@ -40,8 +43,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:57:17.353008Z",
-     "start_time": "2024-05-07T08:57:17.322400Z"
+     "end_time": "2024-05-07T11:30:46.414846Z",
+     "start_time": "2024-05-07T11:30:46.399054Z"
     }
    },
    "cell_type": "code",
@@ -76,8 +79,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:57:17.941489Z",
-     "start_time": "2024-05-07T08:57:17.909669Z"
+     "end_time": "2024-05-07T11:30:46.447590Z",
+     "start_time": "2024-05-07T11:30:46.414846Z"
     }
    },
    "cell_type": "code",
@@ -239,8 +242,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:57:18.451750Z",
-     "start_time": "2024-05-07T08:57:18.427214Z"
+     "end_time": "2024-05-07T11:30:46.463628Z",
+     "start_time": "2024-05-07T11:30:46.447590Z"
     }
    },
    "cell_type": "code",
@@ -266,8 +269,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:57:19.295311Z",
-     "start_time": "2024-05-07T08:57:19.251427Z"
+     "end_time": "2024-05-07T11:30:46.495338Z",
+     "start_time": "2024-05-07T11:30:46.463628Z"
     }
    },
    "cell_type": "code",
@@ -406,8 +409,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:58:19.095552Z",
-     "start_time": "2024-05-07T08:58:19.080514Z"
+     "end_time": "2024-05-07T11:30:46.511089Z",
+     "start_time": "2024-05-07T11:30:46.495338Z"
     }
    },
    "cell_type": "code",
@@ -439,27 +442,27 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:58:19.679608Z",
-     "start_time": "2024-05-07T08:58:19.663753Z"
+     "end_time": "2024-05-07T11:30:46.527206Z",
+     "start_time": "2024-05-07T11:30:46.511089Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def evaluate_random_log(metrics: pd.DataFrame, random_log: pd.DataFrame, complete_log: pd.DataFrame, \n",
-    "                        model_configuration: dict) -> pd.DataFrame:\n",
+    "def evaluate_other_log(metrics: pd.DataFrame, log: pd.DataFrame, complete_log: pd.DataFrame,\n",
+    "                       model_configuration: dict) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Evaluate the random log.\n",
+    "    Evaluate the created log.\n",
     "    \n",
     "    :param metrics: The DataFrame containing the quality metrics.\n",
-    "    :param random_log: The DataFrame containing the randomized log.\n",
+    "    :param log: The DataFrame containing the created log.\n",
     "    :param complete_log: The DataFrame containing the complete log.\n",
     "    :param model_configuration: The configuration dictionary.\n",
     "    :return: The DataFrame containing the quality metrics.\n",
     "    \"\"\"\n",
-    "    random_metrics = metrics[metrics['Iteration'] == 0].copy()\n",
-    "    iteration_metrics = evaluate_iteration(1, random_log, complete_log, model_configuration)\n",
-    "    random_metrics = pd.concat([random_metrics, pd.DataFrame([iteration_metrics])], ignore_index=True)\n",
-    "    return random_metrics\n"
+    "    log_metrics = metrics[metrics['Iteration'] == 0].copy()\n",
+    "    iteration_metrics = evaluate_iteration(1, log, complete_log, model_configuration)\n",
+    "    log_metrics = pd.concat([log_metrics, pd.DataFrame([iteration_metrics])], ignore_index=True)\n",
+    "    return log_metrics\n"
    ],
    "id": "1b1fa2ebafd9d7a0",
    "outputs": [],
@@ -468,8 +471,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:58:20.186359Z",
-     "start_time": "2024-05-07T08:58:20.155030Z"
+     "end_time": "2024-05-07T11:30:46.542925Z",
+     "start_time": "2024-05-07T11:30:46.527206Z"
     }
    },
    "cell_type": "code",
@@ -525,8 +528,75 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:58:20.834342Z",
-     "start_time": "2024-05-07T08:58:20.806697Z"
+     "end_time": "2024-05-07T11:30:46.574329Z",
+     "start_time": "2024-05-07T11:30:46.542925Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def fill_missing_case_ids_logreg(complete_log: pd.DataFrame, elusive_log: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Fill the missing Case ID values in the elusive log using a logistic regression model.\n",
+    "    \n",
+    "    :param complete_log: The DataFrame containing the complete log.\n",
+    "    :param elusive_log: The DataFrame containing the elusive log.\n",
+    "    :return: The DataFrame containing the elusive log with the missing Case ID values filled.\n",
+    "    \"\"\"\n",
+    "    log_reg_file = f\"evaluation/{log_name}/logistic_regression/logistic_regression_{log_name}.csv\"\n",
+    "    \n",
+    "    if os.path.exists(log_reg_file) and os.path.getsize(log_reg_file) > 0:\n",
+    "        print(\"Logistic regression log successfully read.\")\n",
+    "        return pd.read_csv(log_reg_file)\n",
+    "    \n",
+    "    elusive_log['Determined Case ID'] = elusive_log['Original Case ID']\n",
+    "    input_data = elusive_log.copy()\n",
+    "    \n",
+    "    categorical_cols = ['Activity', 'Resource']\n",
+    "    for col in categorical_cols:\n",
+    "        if col in input_data.columns:\n",
+    "            if len(input_data[col].unique()) > 2:\n",
+    "                encoder = OneHotEncoder(sparse=False)\n",
+    "                encoded_cols = pd.DataFrame(encoder.fit_transform(input_data[[col]]),\n",
+    "                                            columns=encoder.get_feature_names_out([col]))\n",
+    "                input_data.drop(columns=[col], inplace=True)\n",
+    "                input_data = pd.concat([input_data, encoded_cols], axis=1)\n",
+    "            else:\n",
+    "                input_data[col] = input_data[col].astype('category').cat.codes\n",
+    "    \n",
+    "    if 'Timestamp' in input_data.columns:\n",
+    "        input_data['Timestamp'] = pd.to_datetime(input_data['Timestamp'])\n",
+    "        min_timestamp = input_data['Timestamp'].min()\n",
+    "        max_timestamp = input_data['Timestamp'].max()\n",
+    "        input_data['Timestamp'] = (input_data['Timestamp'] - min_timestamp) / (max_timestamp - min_timestamp)\n",
+    "    \n",
+    "    missing_indices = input_data['Determined Case ID'].isna()\n",
+    "    missing_data = input_data[missing_indices].drop(columns=['Original Case ID', 'Determined Case ID'])\n",
+    "    \n",
+    "    if missing_indices.any():\n",
+    "        target_values = complete_log['Case ID']\n",
+    "        source_values = input_data.drop(columns=['Original Case ID', 'Determined Case ID'])\n",
+    "        \n",
+    "        X_train, X_test, y_train, y_test = train_test_split(source_values, target_values, test_size=0.2)\n",
+    "        \n",
+    "        model = LogisticRegression()\n",
+    "        model.fit(X_train, y_train)\n",
+    "        \n",
+    "        predicted_values = model.predict(missing_data)\n",
+    "        elusive_log.loc[missing_indices, 'Determined Case ID'] = predicted_values\n",
+    "        \n",
+    "        print(\"Filled missing Case ID values using logistic regression.\")\n",
+    "    \n",
+    "    return elusive_log\n"
+   ],
+   "id": "f15166bf59e288b",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-07T11:30:46.589979Z",
+     "start_time": "2024-05-07T11:30:46.574329Z"
     }
    },
    "cell_type": "code",
@@ -562,13 +632,13 @@
    ],
    "id": "542a104565063188",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:58:21.362148Z",
-     "start_time": "2024-05-07T08:58:21.347698Z"
+     "end_time": "2024-05-07T11:30:46.605598Z",
+     "start_time": "2024-05-07T11:30:46.589979Z"
     }
    },
    "cell_type": "code",
@@ -591,13 +661,13 @@
    ],
    "id": "d8d8f1a9cedfcf2d",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:58:21.833854Z",
-     "start_time": "2024-05-07T08:58:21.803409Z"
+     "end_time": "2024-05-07T11:30:46.637460Z",
+     "start_time": "2024-05-07T11:30:46.609016Z"
     }
    },
    "cell_type": "code",
@@ -664,13 +734,13 @@
    ],
    "id": "f635854ae114b1f4",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:58:22.297546Z",
-     "start_time": "2024-05-07T08:58:22.266298Z"
+     "end_time": "2024-05-07T11:30:46.653220Z",
+     "start_time": "2024-05-07T11:30:46.638601Z"
     }
    },
    "cell_type": "code",
@@ -693,13 +763,13 @@
    ],
    "id": "57f4364067a174a4",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:58:22.860678Z",
-     "start_time": "2024-05-07T08:58:22.829429Z"
+     "end_time": "2024-05-07T11:30:47.084467Z",
+     "start_time": "2024-05-07T11:30:47.068544Z"
     }
    },
    "cell_type": "code",
@@ -722,13 +792,13 @@
    ],
    "id": "8b640d1990ea4e97",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T09:05:03.427635Z",
-     "start_time": "2024-05-07T09:05:03.412020Z"
+     "end_time": "2024-05-07T11:30:47.442420Z",
+     "start_time": "2024-05-07T11:30:47.426746Z"
     }
    },
    "cell_type": "code",
@@ -773,13 +843,13 @@
    ],
    "id": "14840cf9ee8f2eb8",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T08:58:24.329133Z",
-     "start_time": "2024-05-07T08:58:24.315621Z"
+     "end_time": "2024-05-07T11:30:48.197436Z",
+     "start_time": "2024-05-07T11:30:48.181801Z"
     }
    },
    "cell_type": "code",
@@ -793,6 +863,7 @@
     "    :param model_name: Name of the model used for evaluation.\n",
     "    :param log: DataFrame containing the log.\n",
     "    \"\"\"\n",
+    "    model_name = model_name.replace(' ', '_')\n",
     "    folder_name = f\"evaluation/{log_name}/{model_name}\"\n",
     "    os.makedirs(folder_name, exist_ok=True)\n",
     "\n",
@@ -803,17 +874,20 @@
     "    \n",
     "    if model_name == 'randomized':\n",
     "        file_name = f'randomized_{log_name}.csv'\n",
+    "        log.to_csv(os.path.join(folder_name, file_name), index=False)\n",
+    "    elif model_name == 'logistic_regression':\n",
+    "        file_name = f'logistic_regression_{log_name}.csv'\n",
     "        log.to_csv(os.path.join(folder_name, file_name), index=False)\n"
    ],
    "id": "2b88746e93f1974d",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T09:05:20.549462Z",
-     "start_time": "2024-05-07T09:05:06.592961Z"
+     "end_time": "2024-05-07T11:31:08.085600Z",
+     "start_time": "2024-05-07T11:30:49.757873Z"
     }
    },
    "cell_type": "code",
@@ -823,10 +897,14 @@
     "if folder_path:\n",
     "    metrics, elusive_log = evaluate_repaired_logs(folder_path, log_name, complete_log, model_configuration)\n",
     "    random_log = randomize_missing_case_ids(elusive_log, tokenizer, log_name)\n",
-    "    random_metrics = evaluate_random_log(metrics, random_log, complete_log, model_configuration)\n",
+    "    random_metrics = evaluate_other_log(metrics, random_log, complete_log, model_configuration)\n",
     "    random_metrics = format_consistency_metrics(random_metrics, model_configuration)\n",
+    "    logistic_log = fill_missing_case_ids_logreg(complete_log, elusive_log)\n",
+    "    logistic_metrics = evaluate_other_log(metrics, logistic_log, complete_log, model_configuration)\n",
+    "    logistic_metrics = format_consistency_metrics(logistic_metrics, model_configuration)\n",
     "    process_metrics(metrics, log_name)\n",
-    "    process_metrics(random_metrics, log_name, 'randomized', random_log)\n"
+    "    process_metrics(random_metrics, log_name, 'randomized', random_log)\n",
+    "    process_metrics(logistic_metrics, log_name, 'logistic regression', logistic_log)\n"
    ],
    "id": "8364b4c7b44adda0",
    "outputs": [
@@ -839,6 +917,7 @@
       "Model configuration file successfully read.\n",
       "Tokenizer successfully read.\n",
       "Randomized missing Case ID values.\n",
+      "Filled missing Case ID values using logistic regression.\n",
       "\n",
       "=== TRANSFORMER ===\n",
       "\n",
@@ -923,12 +1002,43 @@
       "+=============+=======================+\n",
       "|           0 | 83.33%                |\n",
       "+-------------+-----------------------+\n",
-      "|           1 | 54.55%                |\n",
+      "|           1 | 45.45%                |\n",
+      "+-------------+-----------------------+\n",
+      "\n",
+      "=== LOGISTIC REGRESSION ===\n",
+      "\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|   Iteration | Completeness   | Elus. Completeness   | Accuracy   | Elus. Accuracy   |\n",
+      "+=============+================+======================+============+==================+\n",
+      "|           0 | 80.95%         | 0.00%                | 80.95%     | 0.00%            |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "|           1 | 100.00%        | 100.00%              | 85.71%     | 25.00%           |\n",
+      "+-------------+----------------+----------------------+------------+------------------+\n",
+      "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
+      "|   Iteration | Factual Accuracy   | Elus. Factual Accuracy   | Overall Accuracy   | Elus. Overall Accuracy   |\n",
+      "+=============+====================+==========================+====================+==========================+\n",
+      "|           0 | 0.00%              | 0.00%                    | 80.95%             | 0.00%                    |\n",
+      "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
+      "|           1 | 0.00%              | 0.00%                    | 85.71%             | 25.00%                   |\n",
+      "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
+      "+-------------+----------------------+-------------------------+-------------------------+-----------------------+\n",
+      "|   Iteration | Real Case Accuracy   | Factual Case Accuracy   | Overall Case Accuracy   | St. Ac. Consistency   |\n",
+      "+=============+======================+=========================+=========================+=======================+\n",
+      "|           0 | 0.00%                | 0.00%                   | 0.00%                   | 83.33%                |\n",
+      "+-------------+----------------------+-------------------------+-------------------------+-----------------------+\n",
+      "|           1 | 0.00%                | 0.00%                   | 0.00%                   | 83.33%                |\n",
+      "+-------------+----------------------+-------------------------+-------------------------+-----------------------+\n",
+      "+-------------+-----------------------+\n",
+      "|   Iteration | End Ac. Consistency   |\n",
+      "+=============+=======================+\n",
+      "|           0 | 83.33%                |\n",
+      "+-------------+-----------------------+\n",
+      "|           1 | 100.00%               |\n",
       "+-------------+-----------------------+\n"
      ]
     }
    ],
-   "execution_count": 25
+   "execution_count": 17
   }
  ],
  "metadata": {
