--- a/quality_metrics.ipynb
+++ b/quality_metrics.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.399054Z",
-     "start_time": "2024-05-07T11:30:41.536556Z"
+     "end_time": "2024-05-07T12:18:56.510820Z",
+     "start_time": "2024-05-07T12:18:53.739618Z"
     }
    },
    "cell_type": "code",
@@ -43,8 +43,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.414846Z",
-     "start_time": "2024-05-07T11:30:46.399054Z"
+     "end_time": "2024-05-07T12:18:56.542033Z",
+     "start_time": "2024-05-07T12:18:56.510820Z"
     }
    },
    "cell_type": "code",
@@ -79,8 +79,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.447590Z",
-     "start_time": "2024-05-07T11:30:46.414846Z"
+     "end_time": "2024-05-07T12:18:56.573245Z",
+     "start_time": "2024-05-07T12:18:56.542033Z"
     }
    },
    "cell_type": "code",
@@ -242,8 +242,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.463628Z",
-     "start_time": "2024-05-07T11:30:46.447590Z"
+     "end_time": "2024-05-07T12:18:56.589070Z",
+     "start_time": "2024-05-07T12:18:56.573245Z"
     }
    },
    "cell_type": "code",
@@ -269,8 +269,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.495338Z",
-     "start_time": "2024-05-07T11:30:46.463628Z"
+     "end_time": "2024-05-07T12:18:56.620533Z",
+     "start_time": "2024-05-07T12:18:56.589070Z"
     }
    },
    "cell_type": "code",
@@ -409,8 +409,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.511089Z",
-     "start_time": "2024-05-07T11:30:46.495338Z"
+     "end_time": "2024-05-07T12:18:56.636249Z",
+     "start_time": "2024-05-07T12:18:56.620533Z"
     }
    },
    "cell_type": "code",
@@ -442,8 +442,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.527206Z",
-     "start_time": "2024-05-07T11:30:46.511089Z"
+     "end_time": "2024-05-07T12:18:56.652295Z",
+     "start_time": "2024-05-07T12:18:56.636249Z"
     }
    },
    "cell_type": "code",
@@ -471,8 +471,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.542925Z",
-     "start_time": "2024-05-07T11:30:46.527206Z"
+     "end_time": "2024-05-07T12:18:56.667960Z",
+     "start_time": "2024-05-07T12:18:56.652295Z"
     }
    },
    "cell_type": "code",
@@ -528,25 +528,27 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.574329Z",
-     "start_time": "2024-05-07T11:30:46.542925Z"
+     "end_time": "2024-05-07T12:18:56.683562Z",
+     "start_time": "2024-05-07T12:18:56.667960Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def fill_missing_case_ids_logreg(complete_log: pd.DataFrame, elusive_log: pd.DataFrame) -> pd.DataFrame:\n",
+    "def fill_missing_case_ids_logreg(complete_log: pd.DataFrame, elusive_log: pd.DataFrame, log_name: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Fill the missing Case ID values in the elusive log using a logistic regression model.\n",
     "    \n",
     "    :param complete_log: The DataFrame containing the complete log.\n",
     "    :param elusive_log: The DataFrame containing the elusive log.\n",
+    "    :param log_name: The name of the log file.\n",
     "    :return: The DataFrame containing the elusive log with the missing Case ID values filled.\n",
     "    \"\"\"\n",
     "    log_reg_file = f\"evaluation/{log_name}/logistic_regression/logistic_regression_{log_name}.csv\"\n",
     "    \n",
     "    if os.path.exists(log_reg_file) and os.path.getsize(log_reg_file) > 0:\n",
+    "        log = pd.read_csv(log_reg_file)\n",
     "        print(\"Logistic regression log successfully read.\")\n",
-    "        return pd.read_csv(log_reg_file)\n",
+    "        return log\n",
     "    \n",
     "    elusive_log['Determined Case ID'] = elusive_log['Original Case ID']\n",
     "    input_data = elusive_log.copy()\n",
@@ -595,8 +597,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.589979Z",
-     "start_time": "2024-05-07T11:30:46.574329Z"
+     "end_time": "2024-05-07T12:18:56.699213Z",
+     "start_time": "2024-05-07T12:18:56.683562Z"
     }
    },
    "cell_type": "code",
@@ -637,8 +639,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.605598Z",
-     "start_time": "2024-05-07T11:30:46.589979Z"
+     "end_time": "2024-05-07T12:18:57.106109Z",
+     "start_time": "2024-05-07T12:18:57.082710Z"
     }
    },
    "cell_type": "code",
@@ -666,8 +668,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.637460Z",
-     "start_time": "2024-05-07T11:30:46.609016Z"
+     "end_time": "2024-05-07T12:18:57.605327Z",
+     "start_time": "2024-05-07T12:18:57.589704Z"
     }
    },
    "cell_type": "code",
@@ -739,8 +741,39 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:46.653220Z",
-     "start_time": "2024-05-07T11:30:46.638601Z"
+     "end_time": "2024-05-07T12:18:57.990483Z",
+     "start_time": "2024-05-07T12:18:57.974843Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def perform_evaluation() -> None:\n",
+    "    \"\"\"\n",
+    "    Perform the evaluation of the repaired logs.\n",
+    "    \"\"\"\n",
+    "    complete_log, log_name, folder_path, model_configuration, tokenizer = get_input()\n",
+    "    \n",
+    "    if folder_path:\n",
+    "        metrics, elusive_log = evaluate_repaired_logs(folder_path, log_name, complete_log, model_configuration)\n",
+    "        random_log = randomize_missing_case_ids(elusive_log, tokenizer, log_name)\n",
+    "        random_metrics = evaluate_other_log(metrics, random_log, complete_log, model_configuration)\n",
+    "        random_metrics = format_consistency_metrics(random_metrics, model_configuration)\n",
+    "        logistic_log = fill_missing_case_ids_logreg(complete_log, elusive_log, log_name)\n",
+    "        logistic_metrics = evaluate_other_log(metrics, logistic_log, complete_log, model_configuration)\n",
+    "        logistic_metrics = format_consistency_metrics(logistic_metrics, model_configuration)\n",
+    "        process_metrics(metrics, log_name)\n",
+    "        process_metrics(random_metrics, log_name, 'randomized', random_log)\n",
+    "        process_metrics(logistic_metrics, log_name, 'logistic regression', logistic_log)\n"
+   ],
+   "id": "e9ec5cb5f083a59b",
+   "outputs": [],
+   "execution_count": 13
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-07T12:18:58.449781Z",
+     "start_time": "2024-05-07T12:18:58.419700Z"
     }
    },
    "cell_type": "code",
@@ -763,13 +796,13 @@
    ],
    "id": "57f4364067a174a4",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:47.084467Z",
-     "start_time": "2024-05-07T11:30:47.068544Z"
+     "end_time": "2024-05-07T12:18:58.904517Z",
+     "start_time": "2024-05-07T12:18:58.873224Z"
     }
    },
    "cell_type": "code",
@@ -792,13 +825,13 @@
    ],
    "id": "8b640d1990ea4e97",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:47.442420Z",
-     "start_time": "2024-05-07T11:30:47.426746Z"
+     "end_time": "2024-05-07T12:18:59.317868Z",
+     "start_time": "2024-05-07T12:18:59.302246Z"
     }
    },
    "cell_type": "code",
@@ -815,8 +848,9 @@
     "    randomized_file = f\"evaluation/{log_name}/randomized/randomized_{log_name}.csv\"\n",
     "    \n",
     "    if os.path.exists(randomized_file) and os.path.getsize(randomized_file) > 0:\n",
+    "        log = pd.read_csv(randomized_file)\n",
     "        print(\"Randomized log successfully read.\")\n",
-    "        return pd.read_csv(randomized_file)\n",
+    "        return log\n",
     "    \n",
     "    elusive_log['Determined Case ID'] = elusive_log['Original Case ID']\n",
     "    missing_indices = elusive_log['Determined Case ID'].isna()\n",
@@ -843,13 +877,13 @@
    ],
    "id": "14840cf9ee8f2eb8",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:30:48.197436Z",
-     "start_time": "2024-05-07T11:30:48.181801Z"
+     "end_time": "2024-05-07T12:19:00.085647Z",
+     "start_time": "2024-05-07T12:19:00.070094Z"
     }
    },
    "cell_type": "code",
@@ -881,31 +915,17 @@
    ],
    "id": "2b88746e93f1974d",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:31:08.085600Z",
-     "start_time": "2024-05-07T11:30:49.757873Z"
+     "end_time": "2024-05-07T12:19:18.105654Z",
+     "start_time": "2024-05-07T12:19:01.447127Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "complete_log, log_name, folder_path, model_configuration, tokenizer = get_input()\n",
-    "\n",
-    "if folder_path:\n",
-    "    metrics, elusive_log = evaluate_repaired_logs(folder_path, log_name, complete_log, model_configuration)\n",
-    "    random_log = randomize_missing_case_ids(elusive_log, tokenizer, log_name)\n",
-    "    random_metrics = evaluate_other_log(metrics, random_log, complete_log, model_configuration)\n",
-    "    random_metrics = format_consistency_metrics(random_metrics, model_configuration)\n",
-    "    logistic_log = fill_missing_case_ids_logreg(complete_log, elusive_log)\n",
-    "    logistic_metrics = evaluate_other_log(metrics, logistic_log, complete_log, model_configuration)\n",
-    "    logistic_metrics = format_consistency_metrics(logistic_metrics, model_configuration)\n",
-    "    process_metrics(metrics, log_name)\n",
-    "    process_metrics(random_metrics, log_name, 'randomized', random_log)\n",
-    "    process_metrics(logistic_metrics, log_name, 'logistic regression', logistic_log)\n"
-   ],
+   "source": "perform_evaluation()\n",
    "id": "8364b4c7b44adda0",
    "outputs": [
     {
@@ -916,8 +936,8 @@
       "Folder path successfully read.\n",
       "Model configuration file successfully read.\n",
       "Tokenizer successfully read.\n",
-      "Randomized missing Case ID values.\n",
-      "Filled missing Case ID values using logistic regression.\n",
+      "Randomized log successfully read.\n",
+      "Logistic regression log successfully read.\n",
       "\n",
       "=== TRANSFORMER ===\n",
       "\n",
@@ -981,28 +1001,28 @@
       "+=============+================+======================+============+==================+\n",
       "|           0 | 80.95%         | 0.00%                | 80.95%     | 0.00%            |\n",
       "+-------------+----------------+----------------------+------------+------------------+\n",
-      "|           1 | 100.00%        | 100.00%              | 80.95%     | 0.00%            |\n",
+      "|           1 | 100.00%        | 100.00%              | 85.71%     | 25.00%           |\n",
       "+-------------+----------------+----------------------+------------+------------------+\n",
       "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
       "|   Iteration | Factual Accuracy   | Elus. Factual Accuracy   | Overall Accuracy   | Elus. Overall Accuracy   |\n",
       "+=============+====================+==========================+====================+==========================+\n",
       "|           0 | 0.00%              | 0.00%                    | 80.95%             | 0.00%                    |\n",
       "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
-      "|           1 | 0.00%              | 0.00%                    | 80.95%             | 0.00%                    |\n",
+      "|           1 | 0.00%              | 0.00%                    | 85.71%             | 25.00%                   |\n",
       "+-------------+--------------------+--------------------------+--------------------+--------------------------+\n",
       "+-------------+----------------------+-------------------------+-------------------------+-----------------------+\n",
       "|   Iteration | Real Case Accuracy   | Factual Case Accuracy   | Overall Case Accuracy   | St. Ac. Consistency   |\n",
       "+=============+======================+=========================+=========================+=======================+\n",
       "|           0 | 0.00%                | 0.00%                   | 0.00%                   | 83.33%                |\n",
       "+-------------+----------------------+-------------------------+-------------------------+-----------------------+\n",
-      "|           1 | 0.00%                | 0.00%                   | 0.00%                   | 54.55%                |\n",
+      "|           1 | 0.00%                | 0.00%                   | 0.00%                   | 83.33%                |\n",
       "+-------------+----------------------+-------------------------+-------------------------+-----------------------+\n",
       "+-------------+-----------------------+\n",
       "|   Iteration | End Ac. Consistency   |\n",
       "+=============+=======================+\n",
       "|           0 | 83.33%                |\n",
       "+-------------+-----------------------+\n",
-      "|           1 | 45.45%                |\n",
+      "|           1 | 100.00%               |\n",
       "+-------------+-----------------------+\n",
       "\n",
       "=== LOGISTIC REGRESSION ===\n",
@@ -1038,7 +1058,7 @@
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 18
   }
  ],
  "metadata": {
